crates/cribo/tests/snapshots/bundled_code@simple_treeshaking_inlining.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_treeshaking_inlining/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('speaking', None, None, False, {'PersonTitle': 'PersonTitle', 'Person': 'Person', 'Phrase': 'Phrase'})
speaking = _cribo.types.SimpleNamespace(__name__='speaking')
class PersonTitle(_cribo.enum.Enum):
    MR = "Mr."
    MRS = "Mrs."
    MS = "Ms."
    DR = "Dr."
    PROF = "Prof."
PersonTitle.__module__ = 'speaking'
class Person:

    def __init__(self, name: str, title: PersonTitle):
        self.name = name
        self.title = title

    def greet(self) -> str:
        return f"{self.title.value} {self.name}"
Person.__module__ = 'speaking'
def create_ms(name: str) -> Person:
    return Person(name, PersonTitle.MS)
ALICE_NAME = "Alice"
class Phrase(_cribo.typing.TypedDict):
    what: str
    whom: Person
Phrase.__module__ = 'speaking'
def say(phrase: Phrase) -> str:
    return f"{phrase['what']} {phrase['whom'].greet()}"
speaking.ALICE_NAME = ALICE_NAME
speaking.Person = Person
speaking.PersonTitle = PersonTitle
speaking.Phrase = Phrase
speaking.create_ms = create_ms
speaking.say = say
def main() -> None:
    print(say({"what": "Hello", "whom": create_ms(ALICE_NAME)}))
if __name__ == "__main__":
    main()
