crates/cribo/tests/snapshots/bundled_code@simple_two_dots.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_two_dots/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, _CriboPreservedLoader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('foo', '_cribo_init___cribo_35e8d2_foo', 'foo', True)
_cribo_finder.register('foo.boo.__main__', '_cribo_init___cribo_9fa9ed_foo_boo___main__', 'foo_boo___main__', False)
_cribo_finder.register('foo.boo', None, 'foo_boo', True)
foo_zoo = _cribo.types.SimpleNamespace(__name__='foo.zoo')
foo = _cribo.types.SimpleNamespace(__name__='foo', __initializing__=False, __initialized__=False, __path__=[])
foo.zoo = foo_zoo
ANIMAL = "cat"
foo_zoo.ANIMAL = ANIMAL
foo_boo = _cribo.types.SimpleNamespace(__name__='foo.boo')
foo.boo = foo_boo
foo_boo___main__ = _cribo.types.SimpleNamespace(__name__='foo.boo.__main__', __initializing__=False, __initialized__=False)
foo_boo.__main__ = foo_boo___main__
def _cribo_init___cribo_35e8d2_foo(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    global foo_boo___main__
    foo_boo___main__ = _cribo_init___cribo_9fa9ed_foo_boo___main__(foo_boo___main__)
    tada = foo_boo___main__.tada
    self.tada = tada
    self.tada = tada
    self.boo = foo_boo
    self.zoo = foo_zoo
    self.__initialized__ = True
    self.__initializing__ = False
    return self
foo.__init__ = _cribo_init___cribo_35e8d2_foo
def _cribo_init___cribo_9fa9ed_foo_boo___main__(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    ANIMAL = foo_zoo.ANIMAL
    foo_boo___main__.ANIMAL = ANIMAL

    def tada() -> str:
        return f"Tada {ANIMAL}!"
    self.tada = tada
    self.__initialized__ = True
    self.__initializing__ = False
    return self
foo_boo___main__.__init__ = _cribo_init___cribo_9fa9ed_foo_boo___main__
__cribo_init_result = _cribo_init___cribo_35e8d2_foo(foo)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(foo, attr, getattr(__cribo_init_result, attr))
tada = foo.tada
if __name__ == "__main__":
    print(tada())
boo = foo.boo
zoo = foo.zoo
