crates/cribo/tests/snapshots/bundled_code@stdlib_decorator.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_decorator/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('mypackage.utils', '_cribo_init___cribo_7c69fc_mypackage_utils', 'mypackage_utils', False)
_cribo_finder_local.register('mypackage', '_cribo_init___cribo_41b947_mypackage', 'mypackage', True)
mypackage_utils = _cribo.types.SimpleNamespace(__name__='mypackage.utils', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypackage.utils', mypackage_utils)
def _cribo_init___cribo_7c69fc_mypackage_utils(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'mypackage'
    _cribo_self.__doc__ = "Utils module with contextlib decorator.\n\nThis module must have side effects to become a wrapper module,\nand uses contextlib as a decorator which should be preserved in\nthe init function but currently isn't.\n"
    """Utils module with contextlib decorator.\n\nThis module must have side effects to become a wrapper module,\nand uses contextlib as a decorator which should be preserved in\nthe init function but currently isn't.\n"""
    contextlib = _cribo.contextlib
    _cribo_self.contextlib = contextlib
    _cribo_self.contextlib = contextlib
    os = _cribo.os
    _cribo_self.os = os
    _cribo_self.os = os
    tempfile = _cribo.tempfile
    _cribo_self.tempfile = tempfile
    _cribo_self.tempfile = tempfile
    print("Loading utils module")

    @_cribo.contextlib.contextmanager
    def atomic_open(filename):
        """Write a file atomically using contextlib decorator."""
        print(f"Opening {filename}")
        tmp_descriptor, tmp_name = _cribo.tempfile.mkstemp(dir=_cribo.os.path.dirname(filename))
        try:
            with _cribo.os.fdopen(tmp_descriptor, "wb") as tmp_handler:
                yield tmp_handler
            _cribo.os.replace(tmp_name, filename)
        except BaseException:
            _cribo.os.remove(tmp_name)
            raise
    try:
        if getattr(atomic_open, '__name__', None) == 'atomic_open' and getattr(atomic_open, '__module__', None) == (lambda: None).__module__:
            atomic_open.__module__ = 'mypackage.utils'
            atomic_open.__qualname__ = 'atomic_open'
    except (AttributeError, TypeError):
        pass
    _cribo_self.atomic_open = atomic_open
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
mypackage_utils.__init__ = _cribo_init___cribo_7c69fc_mypackage_utils
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage', __initializing__=False, __initialized__=False, __path__=[])
mypackage.utils = mypackage_utils
def _cribo_init___cribo_41b947_mypackage(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'mypackage'
    _cribo_self.__doc__ = 'Package init file.'
    global mypackage_utils
    """Package init file."""
    mypackage_utils = _cribo_init___cribo_7c69fc_mypackage_utils(mypackage_utils)
    utils = mypackage.utils
    _cribo_self.utils = utils
    print("Loading mypackage")
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
mypackage.__init__ = _cribo_init___cribo_41b947_mypackage
"""Test contextlib import missing in wrapper module init functions.\n\nThis test reproduces the bug found when bundling requests where contextlib\nis used as @contextlib.contextmanager decorator but not imported in the\ngenerated init function for wrapper modules with side effects.\n"""
__cribo_init_result = _cribo_init___cribo_41b947_mypackage(mypackage)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypackage, attr, getattr(__cribo_init_result, attr))
utils = mypackage.utils
with utils.atomic_open("test.txt") as f:
    f.write(b"test")
print("Success")
